see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

01-Dec-2010 Christophe Demko
 # [#23581] Component installer does not use the key from the menu tag
 # [#23534] Method signatures don't match causing PHP strict errors - Features model populateState (Ian MacLennan)
 # [#23533] Method signatures don't match causing PHP strict errors - articles model populate state (Ian MacLennan)

01-Dec-2010 Jean-Marie Simonet
 $^ Enabling custom translation of types in installer messages
 # [#23602] Login redirect form does not redirect to the return parameter passed as GET parameter. Thanks Christophe.
 # [#22039] Using loadposition to load an articles category module returns Fatal error on front. Thanks Angie.
 $ [#23598] The word "warning" cannot be translated. + ordered some strings and updated xx-XX.ini
 # [#23586] Discovering of plugins by the extension manager consider them as installed. Thanks Christophe.
 $ [#23585] Correct Batch Menu Copy/Move Label. Thanks Michael
 
30-Nov-2010 Christophe Demko
 # [#23532] Strict errors - issues with JCacheController (Ian MacLennan)
 # [#23537] Method signatures don't match causing PHP strict errors - JRouter (Ian MacLennan)
 # [#23536] Method signatures don't match causing PHP strict errors - JDate (Ian MacLennan)
 # [#23535] Method signatures don't match causing PHP strict errors - articles model get items (Ian MacLennan)
 # [#23580] 500 Errors going to Article Manager in Hathor (Andrea Tarr)

30-Nov-2010 Jean-Marie Simonet
 # Updating JLanguageTest
 # Corrected JArrayHelperTest unicode corruption
 # [#23569] When adding a form as plugin into article "JLIB_APPLICATION_ERROR_UNHELD_ID" is thrown. Thanks Mark.