@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+02-Dec-2010 Jean-Marie Simonet
+ # [#23605] Adding the string Select in the batch dropdowns
+
 01-Dec-2010 Christophe Demko
  # [#23581] Component installer does not use the key from the menu tag
  # [#23534] Method signatures don't match causing PHP strict errors - Features model populateState (Ian MacLennan)
